--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+boto==2.49.0
+boto3==1.9.137
+botocore==1.12.137
+certifi==2019.3.9
+chardet==3.0.4
+docutils==0.14
+gensim==3.7.2
+idna==2.8
 importlib-metadata==0.9
 inflect==2.1.0
 irc==17.1
@@ -8,9 +16,17 @@ jaraco.itertools==4.4.2
 jaraco.logging==2.0
 jaraco.stream==2.0
 jaraco.text==3.0
+jmespath==0.9.4
 more-itertools==7.0.0
+numpy==1.16.3
+python-dateutil==2.8.0
 pytz==2018.9
 PyYAML==5.1
+requests==2.21.0
+s3transfer==0.2.0
+scipy==1.2.1
 six==1.12.0
+smart-open==1.8.3
 tempora==1.14
+urllib3==1.24.2
 zipp==0.3.3
